# tss-rsa-cpp

./: CMakeLists.txt  README.md
cmake/: CryptoTSSRSAConfig.cmake.in  CryptoTSSRSASgxConfig.cmake.in  setup_installation.cmake
doc/: Description_of_TSS_RSA_Signature_Algorithm.md
examples/: CMakeLists.txt  example.cpp
proto/: tss_rsa.proto
src/: CMakeLists.txt
src/crypto-tss-rsa/: KeyGenParam.cpp  KeyGenParam.h  RSAKeyMeta.cpp  RSAKeyMeta.h  RSAPrivateKeyShare.cpp  RSAPrivateKeyShare.h  RSAPublicKey.cpp  RSAPublicKey.h  RSASigShare.cpp  RSASigShare.h  RSASigShareProof.cpp  RSASigShareProof.h  common.h  emsa_pss.cpp  emsa_pss.h  tss_rsa.cpp  tss_rsa.h  tss_rsa.pb.cc
src/crypto-tss-rsa/proto_gen/: tss_rsa.pb.switch.cc  tss_rsa.pb.switch.h
src/crypto-tss-rsa/proto_gen/3_14/: tss_rsa.pb.h
src/crypto-tss-rsa/proto_gen/3_20/: tss_rsa.pb.cc  tss_rsa.pb.h
test/: CMakeLists.txt  pure-tss-rsa-test.cpp  tss-rsa-benchmark-test.cpp  tss-rsa-test.cpp
